--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.14.21
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=cooldma.test
+maven_group=cooldma.clientrenamer
 archives_base_name=client-renamer
 
 # Dependencies
